# fastpick_integration

./: .gitignore  .gitmodules  readme.md
.docker/: Dockerfile  build.sh  readme.md  ros_entrypoint1.sh
fastpick_bringup/: CMakeLists.txt  package.xml
fastpick_bringup/launch/: fastpick_bringup.launch  fastpick_bringup_camera.launch  fastpick_bringup_control.launch  fastpick_bringup_moveit.launch
fastpick_bringup/tmule/: fastpick_bringup_server.yaml
fastpick_communications/: CMakeLists.txt  package.xml
fastpick_communications/launch/: inference_publisher.launch
fastpick_communications/src/: graph_network_data.py  network_test.py  network_test_enp89s0_192-168-1-47_300.csv  network_test_wg0_10-0-0-1_300_client_mqtt_5g.csv  network_test_wg0_10-0-0-1_300_client_ros_5g.csv  network_test_wlo1_10-101-8-65_300-mqtt-wifi-server.csv  network_test_wlo1_10-101-8-65_300-ros-server.csv  network_test_wlo1_192-168-0-16_300-ros-wifi-server.csv  network_test_wlp92s0_10-101-12-111_300-mqtt-wifi-client.csv  network_test_wlp92s0_10-101-12-111_300-ros-client.csv  network_test_wlp92s0_192-168-0-32_300-mqtt-wifi-client-2.csv  network_test_wlp92s0_192-168-0-32_300-mqtt-wifi-client.csv  network_test_wlp92s0_192-168-0-32_300-ros-wifi-client.csv  network_test_wlp92s0_192-168-1-78_300-ros-5g-client.csv  network_test_wlx70f11c21d4b4_10-101-12-86_120-mqtt-wifi.csv  network_test_wlx70f11c21d4b4_10-101-12-86_120-ros-wifi.csv  network_test_wlx70f11c21d4b4_192-168-1-100_120-mqtt-5G.csv  network_test_wlx70f11c21d4b4_192-168-1-100_120-ros-5G.csv  network_test_wlx70f11c21d4b4_localhost_10.csv  publish_inference.py
fastpick_communications/tmule/: network_wifi_test.yaml  network_wifi_test_mqtt.yaml  network_wifi_test_ros.yaml
fastpick_description/: CMakeLists.txt  package.xml
fastpick_description/calib/: franka_joint_samples.yaml  franka_pose_samples.yaml
fastpick_description/launch/: fastpick_franka_bringup.launch  franka_ee_to_cam_optical_pose.launch
fastpick_description/meshes/: franka_camera_support.STL
fastpick_description/rviz/: fastpick_visual.rviz
fastpick_description/xacro/: franka_arm.urdf.xacro  franka_camera_and_support.urdf.xacro
fastpick_msgs/: CMakeLists.txt  package.xml
fastpick_msgs/action/: StrawberryPick.action
fastpick_msgs/msg/: StrawberryObject.msg  StrawberryObjects.msg
fastpick_perception/: CMakeLists.txt  Dockerfile  args.py  package.xml  requirements.txt
fastpick_perception/config/: fastpick_conda_env.yaml
fastpick_perception/launch/: fastpick_perception_bringup.launch  fastpick_perception_remote_bringup.launch  fastpick_scene_analyzer_client.launch  fastpick_scene_analyzer_server.launch
fastpick_perception/nodes/: fastpick_berry_detection_node.py  fastpick_enet_model.py  fastpick_filter_mask_node.py  fastpick_mask_predictor_model.py
fastpick_perception/save/ENet_Rasberry_v2/: ENet_summary.txt
fastpick_perception/tools/: rs_cam_streams_manager.py  rs_insertPointCloud.py  rs_insertPointCloudSegPtoch.py  rs_webcam_streams.py  rs_webcam_streams_rosbag.py  rs_webcam_streams_rsbag.py
fastpick_pick/: CMakeLists.txt  package.xml
fastpick_pick/launch/: fastpick_action_client.launch  fastpick_pick_berry.launch
fastpick_pick/nodes/: pick_action_cartesian_node.py  pick_action_node.py  pick_collision_handlers.py
fastpick_pick/server/: fastpick_pick_and_place_client.py  fastpick_pick_and_place_server.py
panda_moveit_config/: .setup_assistant  README.md
panda_moveit_config/config/: constraints.yaml  controllers.yaml  joint_limits.yaml  (+7 more)
(+22 files in other folders)
