<?xml version="1.0"?>
<package format="2">
  <name>fastpick_msgs</name>
  <version>0.0.0</version>
  <description>The fastpick_msgs package</description>

  <maintainer email="muhammadarshad0910@gmail.com">Muhammad Arshad</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>message_runtime</build_export_depend>


  <export>

  </export>
</package>
