<?xml version="1.0"?>
<package format="2">
  <name>fastpick_perception</name>
  <version>0.0.0</version>
  <description>The fastpick_perception package</description>


  <maintainer email="muhammadarshad0910@gmail.com">Muhammad Arshad</maintainer> 
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>fastpick_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
