<?xml version="1.0"?>
<package format="2">
  <name>fastpick_pick</name>
  <version>0.0.0</version>
  <description>The fastpick_pick package</description>

  <maintainer email="muhammadarshad0910@gmail.com">Muhammad Arshad</maintainer>
 
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>fastpick_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>


  <exec_depend>fastpick_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
